# mtk-openwrt-feeds

./: .checkpatch.conf  .gitignore  Readme.md  mtk-openwrt-feeds-commit-sha-mapping-table.md  prepare_sdk.sh  remove.patch.list
21.02/: remove_list-mtwifi.txt
autobuild_mac80211_release/: 0001-master-mac80211-generate-hostapd-setting-from-ap-cap.patch  0001-wifi6-mac80211-generate-hostapd-setting-from-ap-cap.patch  0001-wifi7-mac80211-generate-hostapd-setting-from-ap-cap.patch  0002-wifi6-hostapd-makefile-for-utils.patch  0002-wifi7-hostapd-makefile-for-utils.patch  0003-master-mt76-makefile-for-new-chip.patch  0004-2102-netfilter-remove-nf_flow_table_hw.patch  0004-master-wireless-regdb-makefile-for-6E.patch  0005-add-netfilter-netlink-ftnl-package.patch  0007-add-afcd-build-configuration.patch  0007-wifi7-hostapd-revert-hostapd-udebug.patch  0008-wifi7-netifd-revert-udebug.patch  0009-libubox-revert-to-2023-05-23.patch  0010-add-llvm_bpf-toolchain.patch  Release.md  feeds.conf.default-21.02  lede-build-sanity.sh
feed/app/ethswbox/src/example/: CMakeLists.txt  ethswbox_version.h
feed/app/ethswbox/src/example/cli/: ethswbox.c
feed/app/ethswbox/src/example/cli/cmds/: cmds.c  cmds.h  cmds_apps_ssb.c  cmds_apps_ssb.h  cmds_fapi.c  cmds_fapi.h
feed/app/ethswbox/src/example/fapi/: fapi_gsw_hostapi.c  fapi_gsw_hostapi.h  fapi_gsw_hostapi_mdio_relay.c
feed/app/ethswbox/src/example/os/: os_types.h
openwrt_patches-21.02/: 001-target-mediatek-add-mt7986-subtarget.patch  106-00-sysctl-add-smp-script.patch  107-strongswan-5_9_11-upgrade.patch  108-strongswan-add-uci-support.patch  171-generate-clangd-compile_commands-for-kernel-and-packages.patch  202-fix-patch-conflict-due_to_upgrading_from_5.4.238_to_5.4.246.patch  400-mt76-add-makefile.patch  402-master-mac80211-zero-wait-dfs.patch  403-master-mt76-zero-wait-dfs.patch  404-2102-hostapd-sync-include-uapi-linux-nl80211.patch  405-2102-hostapd-zero-wait-dfs.patch  406-master-hostapd-sync-include-uapi-linux-nl80211.patch  407-master-hostapd-zero-wait-dfs.patch  408-2102-hostapd-Add-hostapd-patches-for-WiFi-certification-MBO-test.patch  409-2102-hostapd-print-sae-group-cap-by-hostapd-ctrl.patch  409-master-hostapd-print-sae-group-cap-by-hostapd-ctrl.patch  409-master-mt76-add-support-for-muru_onoff-via-debugfs.patch  410-master-mt76-certification.patch  411-master-mt76-internaldebug.patch  412-master-hostapd-fix-package-install-fail.patch  412-master-mac80211-check-twt-responder-when-setup-twt.patch  (+11 more)
(+7266 files in other folders)
